add jpg in notebook

--- a/transformer/transformer.ipynb
+++ b/transformer/transformer.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,37 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import copy\n",
-    "\n",
-    "def make_model(src_vocab, trg_vocab, d_embed=512, n_layer=6, d_model=512, n_head=8):\n",
-    "    multi_head_attention_layer = MultiHeadAttentionLayer(d_embed = d_embed,\n",
-    "                                                         d_model = d_model,\n",
-    "                                                         n_head = n_head,\n",
-    "                                                         qkv_fc_layer = nn.Linear(d_embed, d_model),\n",
-    "                                                         fc_layer = nn.Linear(d_model, d_embed))\n",
-    "    model = Transformer(src_vocab = src_vocab, \n",
-    "                        trg_vocab = trg_vocab, \n",
-    "                        src_embed = TransformerEmbedding(Embedding(d_embed, src_vocab), PositionalEncoding(d_embed)), \n",
-    "                        trg_embed = TransformerEmbedding(Embedding(d_embed, trg_vocab), PositionalEncoding(d_embed)),\n",
-    "                        encoder = Encoder(sub_layer = EncoderLayer(multi_head_attention_layer = copy.deepcopy(multi_head_attention_layer).to(device),\n",
-    "                                                                   fc_layer = nn.Linear(d_model, d_model),\n",
-    "                                                                   residual_connection = True),\n",
-    "                                          n_layer = n_layer),\n",
-    "                        decoder = Decoder(sub_layer = DecoderLayer(multi_head_attention_layer = copy.deepcopy(multi_head_attention_layer).to(device),\n",
-    "                                                                  masked_multi_head_attention_layer = copy.deepcopy(multi_head_attention_layer).to(device),\n",
-    "                                                                  fc_layer = nn.Linear(d_model, d_model),\n",
-    "                                                                  residual_connection = True),\n",
-    "                                          n_layer = n_layer))\n",
-    "    return model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,8 +124,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./transformer.jpg\" width=\"500\">"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,8 +256,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./self_attention.jpg\" width=\"200\"> <img src=\"./multi_head_attention.jpg\" width=\"300\">"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,21 +513,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([128, 24]) torch.Size([24, 1, 128]) torch.Size([128, 27]) torch.Size([128, 27, 27])\n",
-      "src[0]:  ein mann in einem farbenfrohen outfit und mit hut steht in einer menschenmenge .\n",
+      "torch.Size([128, 25]) torch.Size([25, 1, 128]) torch.Size([128, 25]) torch.Size([128, 25, 25])\n",
+      "src[0]:  bauarbeiter balancieren auf einem schmalen balken , hoch über dem boden .\n",
       "\n",
-      "trg[0]:  a man in a colorful outfit and hat is standing in a crowd .\n",
+      "trg[0]:  construction workers balance on a narrow beam far above the ground .\n",
       "\n",
-      "trg[1]:  three people in skiing gear are standing behind a \" no skiing \" sign .\n",
+      "trg[1]:  one man is visible riding a black horse with a brown horse and bull in the background .\n",
       "\n",
-      "trg_y[0]:  a man in a colorful outfit and hat is standing in a crowd .\n",
+      "trg_y[0]:  construction workers balance on a narrow beam far above the ground .\n",
       "\n"
      ]
     }
@@ -580,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +649,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -751,15 +737,6 @@
     "            tokens = 0\n",
     "\n",
     "    print(\"Final: \", total_loss / total_tokens)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evaluate(valid_)"
    ]
   },
   {
