add attention.png in notebook

--- a/transformer/transformer.ipynb
+++ b/transformer/transformer.ipynb
@@ -263,6 +263,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./attention.png\" width=\"1000\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
